Add chromestatus link to a warning

passive event listener console warning link to
chromestatus entry

BUG=728786

Review-Url: https://codereview.chromium.org/2926073003
Cr-Commit-Position: refs/heads/master@{#477986}

Former-commit-id: e212ac9d8386240fc03f183f9e1fe4a08ea7414e