third_party/WebKit/Source/core/events/EventTarget.cpp
@@ -270,7 +270,8 @@ void EventTarget::SetDefaultAddEventListenerOptions(
     String message_text = String::Format(
         "Added non-passive event listener to a scroll-blocking '%s' event. "
         "Consider marking event handler as 'passive' to make the page more "
-        "responsive.",
+        "responsive. See "
+        "https://www.chromestatus.com/feature/5745543795965952",
         event_type.GetString().Utf8().data());
 
     PerformanceMonitor::ReportGenericViolation(
